day-5-ingress/ingress.yml
# #kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml #-install ingress contr
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: k8s-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /nginx
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx
#             port:
#               number: 80
#       - path: /httpd
#         pathType: Prefix
#         backend:
#           service:
#             name: httpd
#             port:
#               number: 80
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: httpd
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-lb
            port:
              number: 90  # Forward all traffic to service port 90
